<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    android:paddingBottom="@dimen/layout_padding"
    tools:context=".ui.view.MainActivity">

 <com.google.android.material.imageview.ShapeableImageView
     android:id="@+id/profilePicture"
     android:layout_width="@dimen/profile_img"
     android:layout_height="@dimen/profile_img"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:shapeAppearanceOverlay="@style/profile_pic_circle"
     android:src="@drawable/ic_baseline_photo_camera_24"
     android:elevation="@dimen/card_elevation"
     />

 <ImageView
     android:id="@+id/searchNotifications"
     android:layout_width="@dimen/notification_size"
     android:layout_height="@dimen/notification_size"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     android:src="@drawable/ic_baseline_notifications_24" />

 <TextView
     android:id="@+id/searchLabel"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingBottom="@dimen/profile_title_padding"
     android:text="@string/app_name"
     android:textSize="@dimen/profile_title_text"
     android:textAlignment="center"
     android:gravity="center"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintLeft_toLeftOf="@id/profilePicture"
     app:layout_constraintRight_toRightOf="@id/searchNotifications" />
 



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchBaseballButton"
        android:textSize="@dimen/home_btn_text"
        android:text="@string/baseball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borderless_grey_bubble"
        app:layout_constraintTop_toBottomOf="@id/searchLabel"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchBasketballButton"
        android:textSize="@dimen/home_btn_text"
        android:text="@string/basketball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borderless_grey_bubble"
        app:layout_constraintTop_toBottomOf="@id/searchLabel"
        app:layout_constraintLeft_toRightOf="@id/searchBaseballButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchFootballButton"
        android:textSize="@dimen/home_btn_text"
        android:text="@string/football"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borderless_grey_bubble"
        app:layout_constraintTop_toBottomOf="@id/searchLabel"
        app:layout_constraintLeft_toRightOf="@id/searchBasketballButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchSoccerButton"
        android:textSize="@dimen/home_btn_text"
        android:text="@string/soccer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borderless_grey_bubble"
        app:layout_constraintTop_toBottomOf="@id/searchLabel"
        app:layout_constraintLeft_toRightOf="@id/searchFootballButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchHockeyButton"
        android:textSize="@dimen/home_btn_text"
        android:text="@string/hockey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borderless_grey_bubble"
        app:layout_constraintTop_toBottomOf="@id/searchBaseballButton"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchLacrosseButton"
        android:textSize="@dimen/home_btn_text"
        android:text="@string/lacrosse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borderless_grey_bubble"
        app:layout_constraintTop_toBottomOf="@id/searchBaseballButton"
        app:layout_constraintLeft_toRightOf="@id/searchHockeyButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchTennisButton"
        android:textSize="@dimen/home_btn_text"
        android:text="@string/tennis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borderless_grey_bubble"
        app:layout_constraintTop_toBottomOf="@id/searchBaseballButton"
        app:layout_constraintLeft_toRightOf="@id/searchLacrosseButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchWrestlingButton"
        android:textSize="@dimen/home_btn_text"
        android:text="@string/wrestling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borderless_grey_bubble"
        app:layout_constraintTop_toBottomOf="@id/searchBaseballButton"
        app:layout_constraintLeft_toRightOf="@id/searchTennisButton" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_margin"
        android:background="@drawable/borderless_grey_bubble"
        app:layout_constraintTop_toBottomOf="@id/searchWrestlingButton"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/search_margin"
        tools:listitem="@layout/search_card"
        tools:itemCount="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchSearch"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
