<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_margin="@dimen/login_constraint_margin"
    >

    <ImageView
        android:id="@+id/landing_image"
        android:layout_width="@dimen/login_img_size"
        android:layout_height="@dimen/login_img_size"
        android:background="@drawable/image_1"
        android:elevation="@dimen/card_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/landing_image">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/login_margin"
            android:layout_marginRight="@dimen/login_margin"
            android:layout_marginLeft="@dimen/login_margin"
            tools:ignore="MissingConstraints">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmailField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/login_margin_top"
            android:layout_marginRight="@dimen/login_margin"
            android:layout_marginLeft="@dimen/login_margin"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailField">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox android:id="@+id/checkbox_meat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_password"
                android:onClick="onCheckboxClicked"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:padding="@dimen/login_btn_padding"
            android:textSize="@dimen/login_btn_text"
            android:text="@string/sign_in"
            android:layout_width="@dimen/login_btn_width"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            app:layout_constraintTop_toBottomOf="@id/loginPasswordField"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/forgotLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="@dimen/login_small_text"
            android:textColor="@color/hyperlink"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/signInButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:padding="@dimen/login_btn_padding"
            android:textSize="@dimen/login_btn_text"
            android:text="@string/sign_up"
            android:layout_width="@dimen/login_btn_width"
            android:layout_height="wrap_content"
            android:background="@drawable/light_grey_bubble"
            app:layout_constraintTop_toBottomOf="@id/forgotLogin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/viewerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:textSize="@dimen/login_small_text"
        app:layout_constraintBottom_toBottomOf="@id/login_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
