<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.navigation.HomepageFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <!--TODO: THESE BUTTONS TAKE UP TOO MUCH SPACE AND ARE NOT ADAPTIVE-->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/baseballButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/light_grey_bubble"
                    android:text="@string/baseball"
                    android:textSize="@dimen/home_btn_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/basketballButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/basketballButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/light_grey_bubble"
                    android:text="@string/basketball"
                    android:textSize="@dimen/home_btn_text"
                    app:layout_constraintLeft_toRightOf="@id/baseballButton"
                    app:layout_constraintRight_toLeftOf="@id/footballButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/footballButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/light_grey_bubble"
                    android:text="@string/football"
                    android:textSize="@dimen/home_btn_text"
                    app:layout_constraintLeft_toRightOf="@id/basketballButton"
                    app:layout_constraintRight_toLeftOf="@id/soccerButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/soccerButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/light_grey_bubble"
                    android:text="@string/soccer"
                    android:textSize="@dimen/home_btn_text"
                    app:layout_constraintLeft_toRightOf="@id/footballButton"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                  <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/hockeyButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/light_grey_bubble"
                        android:text="@string/hockey"
                        android:textSize="@dimen/home_btn_text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/lacrosseButton"
                        app:layout_constraintTop_toBottomOf="@id/baseballButton" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/lacrosseButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/light_grey_bubble"
                        android:text="@string/lacrosse"
                        android:textSize="@dimen/home_btn_text"
                        app:layout_constraintRight_toLeftOf="@id/tennisButton"
                        app:layout_constraintLeft_toRightOf="@id/hockeyButton"
                        app:layout_constraintTop_toBottomOf="@id/baseballButton" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/tennisButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/light_grey_bubble"
                        android:text="@string/tennis"
                        android:textSize="@dimen/home_btn_text"
                        app:layout_constraintLeft_toRightOf="@id/lacrosseButton"
                        app:layout_constraintRight_toLeftOf="@id/wrestlingButton"
                        app:layout_constraintTop_toBottomOf="@id/baseballButton" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/wrestlingButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/light_grey_bubble"
                        android:text="@string/wrestling"
                        android:textSize="@dimen/home_btn_text"
                        app:layout_constraintLeft_toRightOf="@id/tennisButton"
                        app:layout_constraintTop_toBottomOf="@id/baseballButton"
                        app:layout_constraintRight_toRightOf="parent"/>

                    <TextView
                        android:id="@+id/newsLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/home_margin_top"
                        android:text="@string/sports_news"
                        android:textSize="@dimen/home_label_text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/hockeyButton" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/newsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/newsLabel"
                        tools:itemCount="1"
                        tools:listitem="@layout/sports_news_card" />

                    <TextView
                        android:id="@+id/athletesLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/home_margin_top"
                        android:text="@string/athletes"
                        android:textSize="@dimen/home_label_text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/newsRecyclerView" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/athletesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/athletesLabel"
                        tools:itemCount="1"
                        tools:listitem="@layout/home_screen_card" />
            </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>