<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/addProfilePicture"
            android:layout_width="@dimen/signup_img_size"
            android:layout_height="@dimen/signup_img_size"
            android:layout_marginTop="@dimen/signup_img_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/profile_pic_circle"
            android:src="@drawable/ic_baseline_photo_camera_24"
            android:elevation="@dimen/card_elevation"/>


        <TextView
            android:id="@+id/pageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_margin="@dimen/signup_label_margin"
            android:textSize="@dimen/signup_label_text"
            app:layout_constraintTop_toBottomOf="@id/addProfilePicture"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_marginTop="@dimen/signup_margin"
            android:layout_marginRight="@dimen/signup_margin"
            android:layout_marginLeft="@dimen/signup_margin"
            app:layout_constraintTop_toBottomOf="@+id/pageLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_marginTop="@dimen/signup_margin_top"
            android:layout_marginRight="@dimen/signup_margin"
            android:layout_marginLeft="@dimen/signup_margin"
            app:layout_constraintTop_toBottomOf="@+id/firstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/signup_margin_top"
            android:layout_marginRight="@dimen/signup_margin"
            android:layout_marginLeft="@dimen/signup_margin"
            app:layout_constraintTop_toBottomOf="@+id/lastName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:layout_marginTop="@dimen/signup_margin_top"
            android:layout_marginRight="@dimen/signup_margin"
            android:layout_marginLeft="@dimen/signup_margin"
            app:layout_constraintTop_toBottomOf="@+id/emailField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stateField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state"
            android:layout_marginTop="@dimen/signup_margin_top"
            android:layout_marginRight="@dimen/signup_margin"
            android:layout_marginLeft="@dimen/signup_margin"
            app:layout_constraintTop_toBottomOf="@+id/cityField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stateField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/aboutMeField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/about_me"
            android:layout_marginTop="@dimen/signup_margin_top"
            android:layout_marginRight="@dimen/signup_margin"
            android:layout_marginLeft="@dimen/signup_margin"
            app:layout_constraintTop_toBottomOf="@+id/stateField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aboutMeField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:maxLines="18"
                android:lines="18"
                android:textAlignment="viewStart"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/sportsSelection"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signup_margin_top"
            android:layout_marginRight="@dimen/signup_margin"
            android:layout_marginLeft="@dimen/signup_margin"
            app:layout_constraintTop_toBottomOf="@+id/aboutMeField">

            <AutoCompleteTextView
                android:id="@+id/sportsAutocomplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:inputType="none"
                android:text="@string/sports"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/sportsSelectionTwo"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signup_margin_top"
            android:layout_marginRight="@dimen/signup_margin"
            android:layout_marginLeft="@dimen/signup_margin"
            app:layout_constraintTop_toBottomOf="@+id/sportsSelection">

            <AutoCompleteTextView
                android:id="@+id/sportsAutocompleteSecond"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:inputType="none"
                android:text="@string/sports"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitButton"
            android:padding="@dimen/signup_btn_padding"
            android:layout_marginTop="@dimen/signup_btn_margin_top"
            android:layout_marginBottom="@dimen/signup_btn_margin_bottom"
            android:textSize="@dimen/signup_btn_text"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/light_grey_bubble"
            app:layout_constraintTop_toBottomOf="@id/sportsSelectionTwo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/cancelButton"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:padding="@dimen/signup_btn_padding"
            android:layout_margin="@dimen/signup_btn_margin_top"
            android:textSize="@dimen/signup_btn_text"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/light_grey_bubble"
            app:layout_constraintTop_toBottomOf="@id/sportsSelectionTwo"
            app:layout_constraintLeft_toLeftOf="@id/submitButton"
            app:layout_constraintRight_toRightOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>